Arreglo login y tablas genericas

--- a/Front proyecto/src/app/app.component.html
+++ b/Front proyecto/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div *ngIf="login=='login'">
-<app-menu></app-menu>
+<div *ngIf="login==='login'">
+    <app-menu></app-menu>
 </div>
-<div *ngif="login=='logout'">
-<app-login></app-login>
+<div *ngIf="login==='logout'">
+    <app-form-login></app-form-login>
 </div>
+
