--- a/Front proyecto/src/app/Components/menu/menu.component.html
+++ b/Front proyecto/src/app/Components/menu/menu.component.html
@@ -23,6 +23,24 @@
       <a mat-list-item href="/Gastos"> <span class="material-symbols-outlined">
         attach_money
         </span> Gastos</a>
+        <a mat-list-item href="/formFactura"> <span class="material-symbols-outlined">
+          attach_money
+          </span> Formulario Factura</a>
+          <a mat-list-item href="/formGastos"> <span class="material-symbols-outlined">
+            attach_money
+            </span> Formulario Gastos</a>
+            <a mat-list-item href="/formPersonas"> <span class="material-symbols-outlined">
+              attach_money
+              </span> Formulario Personas</a>
+              <a mat-list-item href="/formProductos"> <span class="material-symbols-outlined">
+                attach_money
+                </span> Formulario Productos</a>
+                <a mat-list-item href="/formProveedor"> <span class="material-symbols-outlined">
+                  attach_money
+                  </span> Formulario Proveedor</a>
+                  <a mat-list-item href="/formPublicidad"> <span class="material-symbols-outlined">
+                    attach_money
+                    </span> Formulario Publicidad</a>
        
     </mat-nav-list>
   </mat-sidenav>
