--- a/Front proyecto/src/app/Components/tabla/tabla.component.html
+++ b/Front proyecto/src/app/Components/tabla/tabla.component.html
@@ -10,30 +10,12 @@
       <ng-container matColumnDef="{{disCol}}" *ngFor="let disCol of displayedColumns">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{disCol}}</th>
         <div *ngIf="disCol==='action'">
-          <td mat-cell *matCellDef="let botton">
-            <button (click)="openDialog">editar</button>
-            <button (click)="eliminarha">eliminar</button>
+          <td mat-cell *matCellDef="let element">
+            <button (click)="openDialog(element)">editar</button>
+            <button (click)="eliminar(element)">eliminar</button>
           </td>
         </div>
         <td mat-cell *matCellDef="let element">{{element[disCol]}}</td>
-      </ng-container>
-  
-      <!-- Progress Column -->
-      <ng-container matColumnDef="progress">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-        <td mat-cell *matCellDef="let row"> {{row.progress}} </td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-      </ng-container>
-  
-      <!-- Fruit Column -->
-      <ng-container matColumnDef="fruit">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-        <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
