--- a/Front proyecto/src/app/Components/gastos/gastos.component.html
+++ b/Front proyecto/src/app/Components/gastos/gastos.component.html
@@ -1,2 +1,2 @@
-<app-tabla [title]="title" [displayedColumns]="displayedColumns" [dataSource]="dataSource" [formComponente]="formComponente"></app-tabla>
+<app-tabla [title]="title" [displayedColumns]="displayedColumns" [dataSource]="dataSource" [formComponente]="formComponente" [componenttable]="'Gastoes'"></app-tabla>
 
