--- a/Front proyecto/src/app/Components/personas/personas.component.html
+++ b/Front proyecto/src/app/Components/personas/personas.component.html
@@ -1,1 +1,1 @@
-<app-tabla [title]="title" [displayedColumns]="displayedColumns" [dataSource]="dataSource" [formComponente]="formComponente"></app-tabla>
+<app-tabla [title]="title" [displayedColumns]="displayedColumns" [dataSource]="dataSource" [formComponente]="formComponente" [componenttable]="'Personas'"></app-tabla>
