--- a/Front proyecto/src/app/Components/tabla/tabla.component.html
+++ b/Front proyecto/src/app/Components/tabla/tabla.component.html
@@ -13,6 +13,13 @@
           <td mat-cell *matCellDef="let element">
             <button (click)="openDialog(element)">editar</button>
             <button (click)="eliminar(element)">eliminar</button>
+            
+          </td>
+        </div>
+        
+        <div *ngIf="disCol==='estatus'">
+          <td mat-cell *matCellDef="let element">
+            <mat-slide-toggle></mat-slide-toggle>
           </td>
         </div>
         <td mat-cell *matCellDef="let element">{{element[disCol]}}</td>
